01.03.2025:
    - Particles rework almost completed. It finally works. 

26.02.2025:
    - Improved jump buffer. Now jump buffer detects presses only in air. That caused us problems with platforms on high speeds.

25.02.2025:
    - Made sword spin collisions more precise by decreasing min rotation amount allowed.
    - Centipede shit fixed. This was because we inited it multiple times and it spawned multiple times. That could never happen if we don't spawn anything only in game state, but i don't know if it's actuall ya good approach. It may be. Now we spawn on init only things for centipede and it causes many confusions. Maybe we should go off that.
    - Checkpoints fully fixed and works better than ever (Maybe there's still blocks disappear, but did not noticed that after other fixes).
    - Tested game in full game speedrun a couple of times. Works fine.
    - Stability fixes.
    - Removed pause game state and instead we just have flag in state_context. That's add things to do when we think about what should happen and don't happen in pause, but we don't care SO much about PAUSE state and it can break things. I hope it did, because that would mean that this horrible bug when we changes in editor don't saved on entering game state, but i hope that's in the past.
    - Changed keys for pause and free cam.

24.02.2025:
    - Cleanup fixes after context refactor.
    - Further improvements of death instinct cooldown reason.
    - Improved light. Next shit need to be when we will go on fully enchancement of light.
    - Added ability to change numerical values of input fields by moving mouse.
    - Worked on checkpoints fix but they're still break things.

23.02.2025: