@@ -44,8 +44,8 @@ enum Particle_Spawn_Area{
 #define MAX_BIG_COUNT_PARTICLES 512
 
 #define SMALL_COUNT_PARTICLES_START_INDEX 0
-#define MEDIUM_COUNT_PARTICLES_START_INDEX MAX_SMALL_COUNT_PARTICLES * MAX_SMALL_COUNT_PARTICLE_EMITTERS
-#define BIG_COUNT_PARTICLES_START_INDEX    MEDIUM_COUNT_PARTICLES_START_INDEX + MAX_MEDIUM_COUNT_PARTICLES * MAX_MEDIUM_COUNT_PARTICLE_EMITTERS
+constexpr f32 MEDIUM_COUNT_PARTICLES_START_INDEX = MAX_SMALL_COUNT_PARTICLES * MAX_SMALL_COUNT_PARTICLE_EMITTERS;
+constexpr f32 BIG_COUNT_PARTICLES_START_INDEX    = MEDIUM_COUNT_PARTICLES_START_INDEX + MAX_MEDIUM_COUNT_PARTICLES * MAX_MEDIUM_COUNT_PARTICLE_EMITTERS;
 
 #define MAX_PARTICLES BIG_COUNT_PARTICLES_START_INDEX + MAX_BIG_COUNT_PARTICLES * MAX_BIG_COUNT_PARTICLE_EMITTERS
 
