@@ -1,5 +1,7 @@
 01.03.2025:
     - Particles rework almost completed. It finally works. 
+    - Mistake in continuous sword collision detection with wrong direction fixed.
+    - Added and tested constexpr. Will be a good thing.
 
 26.02.2025:
     - Improved jump buffer. Now jump buffer detects presses only in air. That caused us problems with platforms on high speeds.
